@@ -59,11 +59,8 @@ namespace Defcon
 			const CFPoint&     GetThrustVector       () const { return ThrustVector; }
 
 			virtual float      GetShieldStrength     () const    { return ShieldStrength.Get().Value; }
-			virtual void       SetShieldStrength     (float f);
+			virtual void       SetShieldStrength     (float f, bool Force = false);
 			virtual bool       RegisterImpact        (float f);
-			//void               BindToShieldValue     (TFunction<void(const float& Val)> Delegate) { ShieldStrength.Bind(Delegate); }
-
-			//bool               HasPassenger          () const { return bHasPassenger; }
 
 			enum ENavControl { Up, Down, Fwd, Back, Count };
 
@@ -77,13 +74,11 @@ namespace Defcon
 			float       ThrustDurationForwards;
 			float       ThrustDurationBackwards;
 			bool        bCanMove;
-			//bool        bHasPassenger = false;
 
 
 		private:
-			//Daylon::TBindableValue<float> ShieldStrength; // 0..1 value
-			TBroadcastableValue<FShieldStrengthInfo>    ShieldStrength;
-			bool                                        bAlive = true;
+			TMessageableValue<FShieldStrengthInfo>    ShieldStrength;
+			bool                                      bAlive = true;
 	};
 
 
