@@ -30,31 +30,27 @@ namespace Defcon
 		typedef ILiveGameObject Super;
 
 		public:
+
 			CPlayerShip();
 			virtual ~CPlayerShip();
 
 			void InitPlayerShip();
 
-			virtual void  Tick          (float DeltaTime) override;
-			virtual void  DrawSmall     (FPainter&, const I2DCoordMapper&, FSlateBrush& Brush) const override;
-			virtual void  OnAboutToDie  () override;
-			virtual void  SetIsAlive    (bool b) override;
-			virtual void  ImpartForces  (float) override; // For the player ship, we need to customize vertical motion.
+			virtual void   Tick               (float DeltaTime) override;
+			virtual void   DrawSmall          (FPainter&, const I2DCoordMapper&, FSlateBrush& Brush) const override;
+			virtual void   OnAboutToDie       () override;
+			virtual void   SetIsAlive         (bool b) override;
+			virtual void   ImpartForces       (float) override; // For the player ship, we need to customize vertical motion.
 
-
-#ifdef SHOW_STATS
-			void DrawStats(FPaintArguments&, int32, int32);
-#endif
-
-			void FaceLeft                     () { Orientation.Fwd.x = -1.0f; }
-			void FaceRight                    () { Orientation.Fwd.x = 1.0f; }
-
-			bool AcquireSmartBomb             ();
-			void AddSmartBombs                (int32 Amount);
-
-			void FireLaserWeapon              (CGameObjectCollection&);
-			bool EmbarkPassenger              (IGameObject*, CGameObjectCollection&);
-			bool DebarkOnePassenger           (CGameObjectCollection&);
+			void           FaceLeft           () { Orientation.Fwd.x = -1.0f; }
+			void           FaceRight          () { Orientation.Fwd.x = 1.0f; }
+				           
+			bool           AcquireSmartBomb   ();
+			void           AddSmartBombs      (int32 Amount);
+				           
+			void           FireLaserWeapon    (CGameObjectCollection&);
+			bool           EmbarkPassenger    (IGameObject*, CGameObjectCollection&);
+			bool           DebarkOnePassenger (CGameObjectCollection&);
 			const CFPoint& GetPickupRadiusBox () const { return PickupBboxRadius; }
 
 			FSlateBrush     RadarBrush;
@@ -62,8 +58,8 @@ namespace Defcon
 
 		private:
 
-			TBroadcastableValue<int32>     SmartbombsLeft;
-			CLaserWeapon                   LaserWeapon;
-			CFPoint                        PickupBboxRadius;
+			TMessageableValue<int32>  SmartbombsLeft;
+			CLaserWeapon              LaserWeapon;
+			CFPoint                   PickupBboxRadius;
 	};
 }
